--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,6 @@ header {
     justify-content: space-between;
     align-items: center;
     flex-wrap: wrap;
-    height: 50px;
 }
 .redes {
     display: flex;
@@ -46,14 +45,15 @@ h1 span {
     width: 100px;
     height: 100px;
 }
+.columna {
+    width: 250px;
+}
 
 .contenedor__col {
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
     align-items: center;
     flex-wrap: wrap;
-    width: 250px;
     background-color: gainsboro;
     border-radius: 15px 0 15px 0;
     padding: 10px 25px;
@@ -61,13 +61,11 @@ h1 span {
     text-align: center;
 }
 
-.contenedor__col2 {
+.col2 {
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
     align-items: center;
     flex-wrap: wrap;
-    width: 250px;
     background-color: greenyellow;
     border-radius: 15px 0 15px 0;
     padding: 10px 25px;
@@ -105,14 +103,11 @@ h3 span{
     
 }
 .content__box {
-    display: flex;
-    flex-direction: column;
+    display: block;
 }
 .box {
-    width: 100%;
     padding: 15px 0 15px 15px;
     text-align: left;
-
 }
 
 .box p {
@@ -148,4 +143,13 @@ h5 {
     padding: 15px 0;
     font-size: 12px;
     font-weight: 400;
+}
+
+@media (max-width:400px) {
+    .columna {
+        width: 100%;
+    }
+    .section {
+        flex-wrap: wrap;
+    }
 }
