--- a/styles.css
+++ b/styles.css
@@ -119,7 +119,13 @@ h3 span{
     text-decoration: none;
     color: black;
 }
-
+.link__col-w {
+    font-size: 14px;
+    font-weight: 400;
+    font-style: italic;
+    text-decoration: none;
+    color: rgb(255, 255, 255);
+}
 
 
 
@@ -165,6 +171,12 @@ h5 {
     padding: 15px 0;
     font-size: 12px;
     font-weight: 400;
+}
+.bg-black {
+    background-color: black;
+    color: white;
+    border-radius: 15px 0 15px 0;
+
 }
 
 @media (max-width:500px) {
