--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,18 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
-body{
+body {
+
+    font-family: 'Roboto Slab', serif;
+}
+
+.cont_body {
     margin: 0 auto;
     padding: 15px;
     max-width: 980px;
-    font-family: 'Roboto Slab', serif;
 }
 
 /* HEADER */
@@ -26,6 +30,7 @@ h1 {
     font-weight: 700;
     margin: 0 0 0 2px;
 }
+
 .h1_eng {
     font-size: 29px;
 }
@@ -36,11 +41,12 @@ h1 {
     margin: 0 5px;
     display: flex;
     justify-content: center;
-    align-items: center; 
+    align-items: center;
     background-color: greenyellow;
     border-radius: 50%;
     cursor: pointer;
 }
+
 .eng a {
     text-decoration: none;
     color: black;
@@ -57,12 +63,14 @@ h1 span {
 
 .redes {
     display: flex;
-    align-items: center; 
+    align-items: center;
     /* gap: 6px; */
 }
+
 .cont__nombre {
     padding: 10px 20px;
 }
+
 .icon__rrss {
     width: 30px;
     height: 30px;
@@ -95,6 +103,7 @@ h1 span {
     width: 100px;
     height: 100px;
 }
+
 .contenedor__col {
     display: flex;
     flex-direction: column;
@@ -114,9 +123,11 @@ h1 span {
     flex-wrap: wrap;
     background-color: greenyellow;
     border-radius: 15px 0 15px 0;
-    padding: 10px 25px;
+    padding: 10px;
     margin: 10px 0;
     text-align: center;
+    text-decoration: none;
+    color: black;
 }
 
 h2 {
@@ -125,7 +136,8 @@ h2 {
     font-weight: 400;
     margin: 0;
 }
-h3 span{
+
+h3 span {
     font-size: 25px;
     color: greenyellow;
 }
@@ -133,15 +145,14 @@ h3 span{
 .cont__nombre p {
     font-family: 'Roboto Slab', serif;
     font-size: 12px;
-    margin: 0;
 }
+
 .link__col {
     font-size: 14px;
     font-weight: 400;
     font-style: italic;
-    text-decoration: none;
-    color: black;
 }
+
 .link__col-w {
     font-size: 14px;
     font-weight: 400;
@@ -150,11 +161,10 @@ h3 span{
     color: rgb(255, 255, 255);
 }
 
-
-
 .content__box {
     display: block;
 }
+
 .box {
     padding: 15px 0 15px 15px;
     text-align: left;
@@ -165,8 +175,9 @@ h3 span{
     font-size: 14px;
     padding-top: 20px;
     margin-right: 10px;
-    line-height:25px;
+    line-height: 25px;
 }
+
 .box ul {
     margin-left: 20px;
     margin-top: 20px;
@@ -179,6 +190,7 @@ h3 span{
     font-size: 13px;
     line-height: 25px;
 }
+
 .bg {
     border-radius: 15px 0 15px 0;
     background-color: gainsboro;
@@ -189,21 +201,47 @@ h4 {
     font-size: 14px;
     font-weight: 400;
 }
+
 h5 {
     font-family: Arial, Helvetica, sans-serif;
     padding: 15px 0;
     font-size: 12px;
     font-weight: 400;
 }
+
+footer {
+    clear: both;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    padding: 15px 40px 20px 40px;
+    text-align: left;
+}
+
 .bg-black {
     background-color: black;
     color: white;
-    border-radius: 15px 0 15px 0;
+}
 
+.miportfolio {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+    padding-top: 20px;
+}
+
+.items {
+    width: auto;
 }
 
 @media (max-width:500px) {
     .section {
         grid-template-columns: 1fr;
+    }
+
+    .items {
+        width: 100%;
+        padding-bottom: 20px;
     }
 }
