--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,6 @@
 }
 
 body {
-
     font-family: 'Roboto Slab', serif;
 }
 
@@ -64,7 +63,6 @@ h1 span {
 .redes {
     display: flex;
     align-items: center;
-    /* gap: 6px; */
 }
 
 .cont__nombre {
@@ -86,8 +84,6 @@ h1 span {
 /* MAIN */
 
 .section {
-    /* display: flex;
-    justify-content: space-between; */
     display: grid;
     grid-template-columns: 1fr 2fr;
 }
@@ -210,16 +206,19 @@ h5 {
 }
 
 footer {
-    display: flex;
+    /* display: flex;
     justify-content: center;
-    flex-direction: column;
+    flex-direction: column; */
+    margin: 0 auto;
+    padding: 20px 40px 60px 40px;
+    border-radius: 0 15px 0 0;
+    max-width: 980px;
+    background-color: black;
+    color: white;
     clear: both;
 }
 
-.bg-black {
-    background-color: black;
-    color: white;
-}
+
 
 .miportfolio {
     display: flex;
@@ -230,6 +229,8 @@ footer {
 
 .items {
     width: auto;
+    margin-bottom: 15px;
+    margin-right: 15px;
 }
 
 @media (max-width:500px) {
@@ -241,4 +242,9 @@ footer {
         width: 100%;
         padding-bottom: 20px;
     }
+
+    footer {
+    padding: 20px 20px 20px 15px;
+    }
+
 }
